# physical-ai-robotics-textbook

./: .env.example  .gitignore  CHAPTER_2_DELIVERY_SUMMARY.md  CHAPTER_GENERATION_GUIDE_13_CHAPTERS.md  DEPLOYMENT.md  README.md  SIMPLIFIED_4_CHAPTER_PLAN.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
.claude/: settings.local.json
backend/: .env.example  .gitignore  .vercelignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  vercel.json
backend/auth/: ENV_SETUP.md  README.md  better-auth.ts  package-lock.json  package.json  patch-package.js  pnpm-lock.yaml  pnpm-workspace.yaml  server.ts  tsconfig.json
backend/auth/api/auth/: [...all].ts
backend/auth/scripts/: fix-user-table.ts  init-auth-tables.ts  verify-auth-schema.ts
backend/book-source/docs/01-chapter-1-ros2-fundamentals/: 01-what-is-ros2.md
backend/book-source/docs/02-chapter-2-gazebo-modeling/: 00-intro.md  01-intro-gazebo.md  02-urdf-basics.md  04-physics-simulation.md  05-adding-sensors.md  06-processing-sensors.md
backend/book-source/docs/03-chapter-3-autonomous-navigation/: 01-navigation-and-localization-overview.md
backend/routers/: auth_proxy.py  chat.py  chatkit.py  personalization.py  profile.py
backend/scripts/: check_env.py  create-personalized-lessons-table.py  create-personalized-lessons-table.sql  schema.sql  test_db_connection.py  test_qdrant.py
backend/services/: agent_service.py  auth_service.py  chatkit_server.py  chatkit_store.py  personalization_service.py  session_service.py
book-source/: docusaurus.config.ts  (+4 more)
(+305 files in other folders)
