[project]
name = "rag-chatbot-backend"
version = "1.0.0"
description = "FastAPI backend for RAG chatbot - Physical AI & Robotics Textbook"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.13",
    "uvicorn[standard]==0.34.0",
    "openai>=2.8.0",
    "qdrant-client==1.12.1",
    "asyncpg==0.30.0",
    "pydantic-settings==2.8.0",
    "pyyaml==6.0.2",
    "tiktoken==0.9.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.0.1",
    "openai-agents>=0.6.0",
    "openai-chatkit>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "config.py", "__init__.py", "routers", "services", "models", "book-source"]
